LPS-140155 Fix truncate text for title in ProjectCard

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/components/_project-card.scss
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/routes/customer-portal/styles/components/_project-card.scss
@@ -65,6 +65,7 @@
 				font-size: var(--h4-font-size);
 				font-weight: var(--font-weight-bold);
 				line-height: 28px;
+				max-width: 450px;
 			}
 
 			.card-text {
